--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,21 +1,46 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding-top: 60px;
   width: 100vw;
-  height: 600px;
+  height: 88.5vh;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
+  font-size: 40px;
+  color: rgba($color: white, $alpha: 0.9);
   text-shadow: 0px 10px 30px black;
-  font-size: 32px;
   font-weight: bold;
+  font-family: "Times New Roman", Times, serif;
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .banner p {
   font-size: 20px;
   color: white;
   text-shadow: 0px 10px 30px black;
+  margin-bottom: 12%;
+}
+
+.pages-home {
+  background-color: black;
+}
+
+.poker-quote {
+  text-align: end;
+  padding-right: 10%;
+}
+
+.play-button {
+  border-radius: 5px;
+  padding: 6px 12px;
+  background: linear-gradient(180deg, #63d471 0%, #233329 100%);
+  text-decoration: none;
+  color:white;
+  &:hover {
+    color: white;
+    background: linear-gradient(180deg, #479550 0%, #233329 100%);
+  }
 }
