--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,9 +1,11 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.clubpoker.net/medias/images/superadmin/articles/normal/poker-las-vegas-casino-wsop-968388.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.ilgiocatoreonline.it/wp-content/uploads/2020/04/Origine-dei-nomi-nel-Poker.jpg);">
   <div class="container">
-    <h1>Preflop</h1>
-    <br>
-    <p>Welcome to the best poker app ! Only for players 🤑💰</p>
-    <br>
-    <a class="btn btn-success" href="/games">Start now</a>
+    <div class="banner-wrapper">
+      <h1>PREFLOP</h1>
+      <div class="poker-quote">
+        <p>“A pair of balls beats everything!”<br>-Phil Ivey</p>
+        <a class="play-button" href="/games">Play now</a>
+      </div>
+    </div>
   </div>
 </div>
