--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -177,7 +177,7 @@
         <% unless @hand_last_bet.amount == 30 %>
           <div class="raise">
             <%= form_for [@game, @current_hand, @bet] do |f| %>
-              <%= f.range_field :amount, min: @min_raise, max:30, step: 1, value: @min_raise, id: 'amount', class: "betting-range" %> <br>
+              <%= f.range_field :amount, min: @min_raise, max:30, step: 1, value: @min_raise, id: 'amount', class: "betting-range #{"d-none" if @min_raise == 30}"%> <br>
               <%= f.submit "Raise to", class:"raise-button me-3" %>
               <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
             <% end %>
@@ -197,7 +197,7 @@
         <% unless @hand_last_bet.amount == 30 %>
           <div class="raise">
             <%= form_for [@game, @current_hand, @bet] do |f| %>
-              <%= f.range_field :amount, min: @min_raise, max:30, step: 1, value: @min_raise, id: 'amount', class: "betting-range" %> <br>
+              <%= f.range_field :amount, min: @min_raise, max:30, step: 1, value: @min_raise, id: 'amount', class: "betting-range #{"d-none" if @min_raise == 30}" %> <br>
               <%= f.submit "Raise to", class:"raise-button me-3" %>
               <div class="raise-amount"><span id="result"><%= @min_raise %></span><span>€</span></div>
             <% end %>
