--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -51,7 +51,6 @@
 .player-card {
   width: auto;
   height: 60px;
-  padding: 5px;
   border-radius: 30px;
   background-color: white;
   margin-top: -56px;
@@ -73,7 +72,7 @@
 .position-0 .button {
   position: absolute;
 	top: -6%;
-  right: 108%;
+  right: 110%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -84,7 +83,7 @@
 .position-1 .button {
   position: absolute;
 	top: 40%;
-  right: -20%;
+  right: -28%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -95,7 +94,7 @@
 .position-2 .button {
   position: absolute;
 	top: -6%;
-  right: -20%;
+  right: -28%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -106,7 +105,7 @@
 .position-3 .button {
   position: absolute;
 	top: 40%;
-  right: -20%;
+  right: -28%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -117,7 +116,7 @@
 .position-4 .button {
   position: absolute;
 	top: -6%;
-  right: 104%;
+  right: 110%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -128,7 +127,7 @@
 .position-5 .button {
   position: absolute;
 	top: 40%;
-  right: 104%;
+  right: 110%;
   border-radius: 50%;
   box-shadow: 0px 1px 5px black;
   height: 30px;
@@ -143,8 +142,8 @@
 
 .position-0 .bet-amount {
   position: absolute;
-	top: -70%;
-  right: -20%;
+	top: -90%;
+  right: -30%;
   padding: 4px 30px;
   border-radius: 20px;
   color: white;
@@ -160,8 +159,8 @@
 
 .position-1 .bet-amount {
   position: absolute;
-	top: -36%;
-  right: -40%;
+	top: -38%;
+  right: -50%;
   padding: 4px 30px;
   border-radius: 20px;
   color: white;
@@ -177,8 +176,8 @@
 
 .position-2 .bet-amount {
   position: absolute;
-	top: 90%;
-  right: -40%;
+	top: 120%;
+  right: -50%;
   padding: 4px 30px;
   border-radius: 20px;
   color: white;
@@ -194,8 +193,8 @@
 
 .position-3 .bet-amount {
 position: absolute;
-top: 120%;
-right: -16%;
+top: 160%;
+right: -24%;
 padding: 4px 30px;
 border-radius: 20px;
 color: white;
@@ -211,8 +210,8 @@ height: 22px;
 
 .position-4 .bet-amount {
   position: absolute;
-	top: 75%;
-  left: -30%;
+	top: 120%;
+  left: -38%;
   padding: 4px 30px;
   border-radius: 20px;
   color: white;
@@ -228,8 +227,8 @@ height: 22px;
 
 .position-5 .bet-amount {
   position: absolute;
-	top: -26%;
-  left: -30%;
+	top: -50%;
+  left: -38%;
   padding: 4px 30px;
   border-radius: 20px;
   color: white;
@@ -288,7 +287,7 @@ height: 22px;
   width: 50px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid lightgrey;
+  border: 2px solid lightgrey;
 }
 
 .position-0 .in-game-picture {
@@ -349,4 +348,35 @@ height: 22px;
   height: 70px;
   border-radius: 50%;
   object-fit: cover;
+}
+
+.position-0 .user-infos {
+  margin-left: 40px;
+}
+
+.position-4 .user-infos {
+  margin-left: 40px;
+}
+
+.position-5 .user-infos {
+  margin-left: 40px;
+}
+
+.position-1 .user-infos {
+  margin-right: 40px;
+}
+
+.position-2 .user-infos {
+  margin-right: 40px;
+}
+
+.position-3 .user-infos {
+  margin-right: 40px;
+}
+
+
+.user-pseudo {
+  font-size: 20px;
+  font-weight: 500;
+  border-bottom: 2px solid lightgrey;
 }
