--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -45,10 +45,74 @@
         <li class="nav-item">
           <%= link_to "Log In", new_user_session_path, class: "nav-link-logout" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link-logout", id: "sign-up-button" %>
+        <li class="nav-item" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <span type="button" class="nav-link-logout" id="sign-up-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Sign up
+          </span>
         </li>
       <% end %>
     </ul>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="signup-form">
+              <h2>Sign up</h2>
+              <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= f.error_notification %>
+
+                <div class="form-inputs">
+                  <%= f.input :email,
+                              required: true,
+                              autofocus: true,
+                              input_html: { autocomplete: "email"},
+                              placeholder: "sam@preflop.com" %>
+                  <%= f.input :name,
+                              required: true,
+                              autofocus: true,
+                              input_html: { autocomplete: "name" }%>
+                  <%= f.input :pseudo,
+                              required: true,
+                              autofocus: true,
+                              input_html: { autocomplete: "pseudo" }%>
+                  <%= f.input :password,
+                              required: true,
+                              hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                              input_html: { autocomplete: "new-password" },
+                              placeholder: "••••••••••" %>
+                  <%= f.input :password_confirmation,
+                              required: true,
+                              input_html: { autocomplete: "new-password" },
+                              placeholder: "••••••••••" %>
+                  <%= f.input :photo, as: :file,
+                              required: true,
+                              label: "Upload a picture of you...",
+                              autofocus: true %>
+                </div>
+
+                <div class="form-actions">
+                  <%= f.button :submit, "Sign up", class: "btn btn-danger" %>
+                </div>
+              <% end %>
+
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
 </div>
