--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -58,8 +58,11 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+      <div class="modal-header d-flex justify-content-betwee">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Anglo-American_card_suits.svg/926px-Anglo-American_card_suits.svg.png" class="modal-image" />
+        <div class="d-flex align-items-center ms-2">
+          <h5 class="modal-title" id="exampleModalLabel">Join Preflop today</h5>
+        </div>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -86,7 +89,7 @@
                               input_html: { autocomplete: "pseudo" }%>
                   <%= f.input :password,
                               required: true,
-                              hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                              hint: ("6 characters minimum"),
                               input_html: { autocomplete: "new-password" },
                               placeholder: "••••••••••" %>
                   <%= f.input :password_confirmation,
@@ -103,15 +106,9 @@
                   <%= f.button :submit, "Sign up", class: "btn btn-danger" %>
                 </div>
               <% end %>
-
-              <%= render "devise/shared/links" %>
             </div>
           </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
