--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -66,19 +66,29 @@ abbr {
 }
 
 .file-upload {
-  border: 1px solid grey;
   fill:black;
 }
 
 input[type=file]::file-selector-button {
-  border: 2px solid #6c5ce7;
+  border: 2px solid rgb(82, 163, 255);
   padding: .2em .4em;
   border-radius: .2em;
-  background-color: #a29bfe;
+  background-color: rgb(82, 163, 255);
   transition: 1s;
+  margin-right: 30px;
 }
 
 input[type=file]::file-selector-button:hover {
-  background-color: #81ecec;
-  border: 2px solid #00cec9;
+  background-color: rgb(35, 133, 244);
+  border: 2px solid rgb(35, 133, 244);
+}
+
+.signup-button {
+  border-radius: 5px;
+  width: 100%;
+  background-color: rgb(255, 72, 72);
+  transition: 0.4s;
+  &:hover {
+    background-color: rgb(255, 0, 0);
+  }
 }
