--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -96,13 +96,12 @@
                               required: true,
                               input_html: { autocomplete: "new-password" },
                               placeholder: "••••••••••" %>
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Anglo-American_card_suits.svg/926px-Anglo-American_card_suits.svg.png" id="upfile1" style="cursor:pointer" />
                   <%= f.input :photo, as: :file, id: "file1", name: "file1", style:"display:none",
                               label: "Upload a picture of you..." %>
                 </div>
 
                 <div class="form-actions">
-                  <%= f.button :submit, "Sign up", class: "btn btn-danger" %>
+                  <%= f.button :submit, "Sign up", class: "signup-button" %>
                 </div>
               <% end %>
             </div>
