--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -89,6 +89,10 @@ input[type=file]::file-selector-button:hover {
   background-color: rgb(255, 72, 72);
   transition: 0.4s;
   &:hover {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(248, 32, 32);
   }
+}
+
+.user_remember_me .check_boxes {
+  margin-left: 10px;
 }
