--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -95,3 +95,16 @@ input[type=file]::file-selector-button:hover {
 .user_remember_me .check_boxes {
   margin-left: 10px;
 }
+
+.errors {
+  color: red;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.sign_up_errors {
+  color: red;
+  margin-bottom: 10px;
+  padding: 10px;
+  text-align: center;
+}
