--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
 }
 
 .poker-symbols {
-  color: transparent;
+  // color: transparent;
   text-shadow: 0 0 0 white;
   margin: 0;
   font-size: 18px;
