--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -38,8 +38,8 @@
 
       <td><%= Reservation.where(game: game, active: true).count %></td>
       <td>Active</td>
-      <td>
-        <%= link_to game_path(game), target: :_blank do %>
+      <td class="arrow-td">
+        <%= link_to game_path(game), target: :_blank, class:"arrow-join" do %>
           <i class="fas fa-arrow-alt-circle-right"></i>
         <% end %>
       </td>
