--- a/app/assets/stylesheets/pages/_games-index.scss
+++ b/app/assets/stylesheets/pages/_games-index.scss
@@ -106,8 +106,8 @@ th {
 }
 
 .index-table {
-  background-color: rgba($color: white, $alpha: 0.9);
-  box-shadow: 1px 1px 8px white;
+  background-color: rgba($color: white, $alpha: 0.88);
+  box-shadow: 1px 1px 8px black;
   border-radius: 5px;
 }
 
