--- a/app/assets/stylesheets/pages/_games-index.scss
+++ b/app/assets/stylesheets/pages/_games-index.scss
@@ -125,6 +125,47 @@ th {
   color: limegreen
 }
 .btn:focus {
-    outline: 0;
-    box-shadow: none;
+  outline: 0;
+  box-shadow: none;
+}
+
+.game-infos-buttons {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.collection_radio_buttons {
+  margin-right: 20px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+.create-game-button {
+  margin-top: 12px;
+}
+
+
+input[type='radio'] {
+  -webkit-appearance:none;
+  width:14px;
+  height:14px;
+  border-radius:50%;
+  outline:none;
+  box-shadow:0 0 5px 0px gray inset;
+}
+
+input[type='radio']:hover {
+  box-shadow:0 0 5px 0px rgb(255, 102, 102) inset;
+}
+
+input[type='radio']:before {
+  content:'';
+  display:block;
+  width:60%;
+  height:60%;
+  margin: 20% auto;
+  border-radius:50%;
+}
+input[type='radio']:checked:before {
+  background:red;
 }
