start of pineapple complete

--- a/app/assets/stylesheets/pages/_games-index.scss
+++ b/app/assets/stylesheets/pages/_games-index.scss
@@ -94,11 +94,11 @@ th {
   text-align: center;
 }
 
-.game-row {
-  &:hover {
-    // background-color: rgb(195, 195, 195);
-  }
-}
+// .game-row {
+//   &:hover {
+//     // background-color: rgb(195, 195, 195);
+//   }
+// }
 
 .games-index {
   // background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.ilgiocatoreonline.it/wp-content/uploads/2020/04/Origine-dei-nomi-nel-Poker.jpg);
