--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -45,19 +45,28 @@
         <div class="player-cards-wrapper">
           <% if (user == @user && @in_hand_players.include?(user)) %>
             <div class="text-center d-flex justify-content-center">
-              <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1" %>
+              <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3}" %>
               <%= image_tag "#{@current_hand.user_cards.where(user: @user)[1].deck_card.url}", class: "user-cards-2" %>
+              <% if @current_hand.user_cards.where(user: @user).count == 3 %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: @user)[2].deck_card.url}", class: "user-cards-3" %>
+              <% end %>
             </div>
           <% elsif @in_hand_players.include?(user) %>
             <% if @current_hand.better == nil  %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1" %>
+                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2" %>
+                <% if @current_hand.user_cards.where(user: @user).count == 3 %>
+                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3" %>
+                <% end %>
               </div>
             <% else %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "card_back.png", class: "user-cards-1" %>
+                <%= image_tag "card_back.png", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3}" %>
                 <%= image_tag "card_back.png", class: "user-cards-2" %>
+                <% if @current_hand.user_cards.where(user: @user).count == 3 %>
+                  <%= image_tag "card_back.png", class: "user-cards-3" %>
+                <% end %>
               </div>
             <% end %>
           <% else %>
@@ -99,7 +108,7 @@
           </div>
         </div>
         <% player_position += 1 %>
-        <% if @in_hand_players.include?(user) && @current_hand.flop_cards.count == 3 %>
+        <% if (@in_hand_players.include?(user) && @current_hand.flop_cards.count == 3) && ((UserCard.where(hand: @current_hand).count == @active_players.count * 2) || (UserCard.where(hand: @current_hand).count == @active_players.count * 4) )  %>
           <div class="d-flex justify-content-center">
             <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
           </div>
@@ -148,7 +157,12 @@
       <% if @game.users.include?(current_user) %>
         <div class="buttons d-flex justify-content-center">
           <%= simple_form_for [@game, @hand] do |f| %>
-            <%= f.submit "Shuffle and deal", class: "dealing-button" %>
+            <%= f.hidden_field :name, :value => "Texas" %>
+            <%= f.submit "Texas", class: "dealing-button" %>
+          <% end %>
+          <%= simple_form_for [@game, @hand] do |f| %>
+            <%= f.hidden_field :name, :value => "Pineapple" %>
+            <%= f.submit "Pineapple", class: "dealing-button" %>
           <% end %>
           <% if @current_hand && @game.users.include?(current_user) %>
             <% if @current_hand.flop_cards.count == 0 %>
