--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -52,7 +52,7 @@
               <% end %>
             </div>
           <% elsif @in_hand_players.include?(user) %>
-            <% if @current_hand.better == nil  %>
+            <% if @current_hand.better == nil && (@in_hand_players_card_count == @in_hand_players.count * 2 || @in_hand_players_card_count == @in_hand_players.count * 4 ) %>
               <div class="text-center d-flex justify-content-center">
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2" %>
@@ -76,7 +76,7 @@
             </div>
           <% end %>
         </div>
-        <% if  UserHand.where(user: user, hand: @current_hand)[0] %>
+        <% if  UserHand.where(user: user, hand: @current_hand)[0] && ((@in_hand_players_card_count == @in_hand_players.count * 2) || (@in_hand_players_card_count == @in_hand_players.count * 4)) %>
           <div class="percentage" id="<%= 'current-winner' if @current_winners && @current_winners.include?(user) %>">
             <%= UserHand.where(user: user, hand: @current_hand)[0].odds %>
           </div>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <% player_position += 1 %>
-        <% if (@in_hand_players.include?(user) && @current_hand.flop_cards.count == 3) && ((UserCard.where(hand: @current_hand).count == @active_players.count * 2) || (UserCard.where(hand: @current_hand).count == @active_players.count * 4) )  %>
+        <% if (@in_hand_players.include?(user) && @current_hand.flop_cards.count == 3) && ((@in_hand_players_card_count == @in_hand_players.count * 2) || (@in_hand_players_card_count == @in_hand_players.count * 4))  %>
           <div class="d-flex justify-content-center">
             <p class="hand-strength"><%= UserHand.where(user: user, hand: @current_hand)[0].rank %></p>
           </div>
